增加管理页面增删
