# backend/swagger/swagger.yml
@@ -109,6 +109,19 @@ paths:
           description: ''
         '400':
           description: no enough input
+    delete:
+        tags:
+          - blog
+        parameters:
+          - in: path
+            name: id
+            description: 博客ID
+        description: 删除博客
+        responses:
+          '200':
+            description: ''
+          '400':
+            description: no enough input
   /v1/blog/{id}/comment:
     put:
       tags:
@@ -123,19 +136,6 @@ paths:
           schema:
             $ref: '#/definitions/commontBlog'
       description: 评论博客
-      responses:
-        '200':
-          description: ''
-        '400':
-          description: no enough input
-    delete:
-      tags:
-        - blog
-      parameters:
-        - in: path
-          name: id
-          description: 博客ID
-      description: 删除博客
       responses:
         '200':
           description: ''
